# kernel_devices_google_shusky

./: BUILD.bazel  Kconfig.ext  build.config.shusky  build_shusky.sh  constants.bzl  device.bazelrc  shusky_defconfig  shusky_gki.fragment
display/: BUILD.bazel  panel-google-bigsurf.c  panel-google-hk3.c
dts/: BUILD.bazel  zuma-shusky-battery.dtsi  zuma-shusky-bcl.dtsi  zuma-shusky-board.dtsi  zuma-shusky-charging.dtsi  zuma-shusky-haptics.dtsi  zuma-shusky-usb.dtsi  zuma-shusky-wcharger.dtsi
dts/google/: zuma-husky-common.dtsi  zuma-husky-touch.dtsi  zuma-ripcurrent-haptics.dtsi  zuma-ripcurrent-wcharger-ra9530.dtsi  zuma-shiba-common.dtsi  zuma-shusky-battery.dtsi  zuma-shusky-charging.dtsi  zuma-shusky-dma-heap.dtsi  zuma-shusky-haptics.dtsi  zuma-shusky-pmic.dtsi  zuma-shusky-wcharger-proto.dtsi
